[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/CountdownTimer.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/InfoFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sound/271163__alienxxx__beep-008.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 192
font_data = ExtResource( 2 )

[node name="CountdownTimer" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerBgPanel" type="ColorRect" parent="."]
visible = false
margin_left = -394.0
margin_top = -177.0
margin_right = 8.0
margin_bottom = -5.0
color = Color( 0.384314, 0.0980392, 0.0980392, 0.752941 )

[node name="TimeDisplay" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -150.0
margin_right = -3.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "99999"
align = 2

[node name="TimeLabel" type="Label" parent="."]
margin_left = -367.44
margin_top = -168.688
margin_right = -7.43951
margin_bottom = -104.688
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "LAUNCHING IN"

[node name="TimerTick" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="TimerSeconds" type="Timer" parent="."]
autostart = true

[node name="TimerCountdown" type="Timer" parent="."]
wait_time = 60.0

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -195.411, 11.6913 )
stream = ExtResource( 4 )
[connection signal="timeout" from="TimerTick" to="." method="_on_TimerTick_timeout"]
[connection signal="timeout" from="TimerSeconds" to="." method="_on_TimerSeconds_timeout"]
[connection signal="timeout" from="TimerCountdown" to="." method="_on_TimerCountdown_timeout"]
